build: Add perfasm as a profiler